--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ flask==2.0.1
 gunicorn==20.1.0
 importlib-metadata==4.5.0
 itsdangerous==2.0.1
-jinja2==3.0.1
+Jinja2==3.0.1
 markupsafe==2.0.1
 typing-extensions==3.10.0.0
 werkzeug==2.0.1
